criando imagens dos produtos

--- a/index.html
+++ b/index.html
@@ -33,6 +33,18 @@
     <div id="menu">
 
         <main>
+            <!-- PRODUTO ITEM -->
+            
+            <div>
+                <img
+                src="./assets/hamb-1.png" 
+                alt="Hamburguer Smash"
+                class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2"
+                />
+                
+            </div>
+            <!-- FIM PRODUTO ITEM -->
+
 
         </main>
     </div>
