--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./styles/output.css">
     <title>Kill Hunger - A melhor forma de matar a fome.</title>
 </head>
@@ -39,8 +40,20 @@
                 <img
                 src="./assets/hamb-1.png" 
                 alt="Hamburguer Smash"
-                class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2"
+                class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
                 />
+
+                <div>
+                    <p class="font-bold">Hanburguer Smash</p>
+                    <p class="text-sm">Pão levinho de fermentação natural de trigo, burguer 180g, queijo prato, alface, tomate e maionese da casa.</p>
+
+                    <div class="flex items-center gap-2 justify-between">
+                        <p class="font-bold text-lg ">R$ 18.90</p>
+                        <button class="bg-gray-900 px-5 rounded add-to-cart-btm">
+                            <i class="fa fa-cart-plus text-lg text-white"></i>
+                        </button>
+                    </div>
+                </div>
                 
             </div>
             <!-- FIM PRODUTO ITEM -->
