ajustando as distancias e tamanhos

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- INICIO MENU -->
     <div id="menu">
 
-        <main class="grid grid-cols-1 gap-7 mx-auto max-w-7xl">
+        <main class="grid grid-cols-1 md:grid-cols-2 gap-7 mx-auto max-w-7xl px-2">
             <!-- PRODUTO ITEM -->
             
             <div class="flex gap-2">
