Criando o Grid Bebidas

--- a/index.html
+++ b/index.html
@@ -276,19 +276,19 @@
             <div class="flex gap-2">
                 <img
                 src="./assets/refri-1.png" 
-                alt="Monster Cheeseburguer com aneis de cebola"
+                alt="Coca-Cola lata"
                 class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
                 />
 
                 <div>
-                    <p class="font-bold">Monster Cheeseburguer com aneis de cebola</p>
-                    <p class="text-sm">Pão levinho de fermentação natural de trigo, cheeseburguer  de carne 250g, aneis de cebola e molho barbecue.</p>
+                    <p class="font-bold">Coca-Cola lata</p>
+                    <p class="text-sm">355ml.</p>
 
                     <div class="flex items-center gap-2 justify-between mt-3">
-                        <p class="font-bold text-lg ">R$ 42.20</p>
+                        <p class="font-bold text-lg ">R$ 4.50</p>
                         <button 
                             class="bg-gray-900 px-5 rounded add-to-cart-btn"
-                            data-name="Monster Cheeseburguer com aneis de cebola"
+                            data-name="Coca-Cola lata"
                             data-price="42.20"
                             >
 
@@ -304,20 +304,20 @@
             <div class="flex gap-2">
                 <img
                 src="./assets/refri-2.png" 
-                alt="Monster Cheeseburguer com aneis de cebola"
+                alt="Guaraná Antarctica lata"
                 class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
                 />
 
                 <div>
-                    <p class="font-bold">Monster Cheeseburguer com aneis de cebola</p>
-                    <p class="text-sm">Pão levinho de fermentação natural de trigo, cheeseburguer  de carne 250g, aneis de cebola e molho barbecue.</p>
+                    <p class="font-bold">Guaraná Antarctica lata</p>
+                    <p class="text-sm">355ml.</p>
 
                     <div class="flex items-center gap-2 justify-between mt-3">
-                        <p class="font-bold text-lg ">R$ 42.20</p>
+                        <p class="font-bold text-lg ">R$ 4.50</p>
                         <button 
                             class="bg-gray-900 px-5 rounded add-to-cart-btn"
-                            data-name="Monster Cheeseburguer com aneis de cebola"
-                            data-price="42.20"
+                            data-name="Guaraná Antarctica lata"
+                            data-price="4.50"
                             >
 
                             <i class="fa fa-cart-plus text-lg text-white"></i>
