--- a/index.html
+++ b/index.html
@@ -270,17 +270,17 @@
             </h2>
         </div>
         <!-- GRID BEBIDAS -->
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-7 md:gap-10 mx-auto max-w-7xl px-2 mb-16">
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-7 md:gap-10 mx-auto max-w-7xl px-2 mb-16" id="menu">
             <!-- BEBIDA ITEM 1 -->
             
-            <div class="flex gap-2">
+            <div class="flex gap-2 w-full">
                 <img
                 src="./assets/refri-1.png" 
                 alt="Coca-Cola lata"
                 class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
                 />
 
-                <div>
+                <div class="w-full">
                     <p class="font-bold">Coca-Cola lata</p>
                     <p class="text-sm">355ml.</p>
 
@@ -301,14 +301,14 @@
             <!-- FIM BEBIDA ITEM 1 -->
             <!-- BEBIDA ITEM 2 -->
                 
-            <div class="flex gap-2">
+            <div class="flex gap-2 w-full">
                 <img
                 src="./assets/refri-2.png" 
-                alt="Guaraná Antarctica lata"
+                alt="Guarana Antarctica lata"
                 class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
                 />
 
-                <div>
+                <div class="w-full">
                     <p class="font-bold">Guaraná Antarctica lata</p>
                     <p class="text-sm">355ml.</p>
 
@@ -316,7 +316,7 @@
                         <p class="font-bold text-lg ">R$ 4.50</p>
                         <button 
                             class="bg-gray-900 px-5 rounded add-to-cart-btn"
-                            data-name="Guaraná Antarctica lata"
+                            data-name="Guarana Antarctica lata"
                             data-price="4.50"
                             >
 
