--- a/index.html
+++ b/index.html
@@ -335,6 +335,13 @@
     <!-- FIM MENU -->
 
     <!-- MODAL CART -->
+    <div class="bg-black/50 w-full h-full fixed top-0 left-0 z-[99] flex items-center justify-center">
+
+        <div class="bg-white p-5 rounded-md min-w-[90%]">
+            <h2>Meu carrinho</h2>
+
+        </div>
+    </div>
     <!-- FIM MODAL CART -->
 
     <!-- BUTTON CART FOOTER -->
