--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet" />
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./styles/output.css" />
@@ -292,8 +292,8 @@
                         <p class="font-bold text-lg ">R$ 4.50</p>
                         <button 
                             class="bg-gray-900 px-5 rounded add-to-cart-btn"
-                            data-name="Coca-Cola lata"
-                            data-price="42.20"
+                            data-name="Coca-Cola-lata"
+                            data-price="4.50"
                             >
 
                             <i class="fa fa-cart-plus text-lg text-white"></i>
@@ -344,7 +344,7 @@
     >
                     <!-- No celular fica em 90% e no cumputador fica com 600px -->
         <div class="bg-white p-5 rounded-md min-w-[90%] md:min-w-[600px]">  
-            <h2 class="text-center font-bold text-2x mb-2">Meu carrinho</h2>
+            <h2 class="text-center font-bold text-2xl mb-2">Meu carrinho</h2>
 
             <div id="cart-items" class="flex justify-between mb-2 flex-col"></div>
 
