--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             />
             <h1 class="text-4xl mt-4 mb-2 font-bold text-white">Kill Hunger</h1>
 
-            <span class="text-white font-medium">Estrada de Boa Esperança, 1009 casa 15, Lumiar - RJ
+            <span class="text-white font-medium">Estrada de Boa Esperança,<br> 1009 casa 15, Lumiar - RJ
             </span>
 
             <div class="bg-green-600 px-3 py-1 rounded-lg mt-5" id="date-span">
